cabal-version: 2.4
name: onirim
version: 0

executable advent
  main-is: Main.hs
  build-depends:
      base
    , text
    , lens
    , vector
    , primitive
    -- , sets
    , unordered-containers
    , hashable
    , containers
    , reducers
    , algebraic-graphs
  default-extensions:
      ScopedTypeVariables
    , OverloadedStrings
    , DerivingStrategies
    , DeriveGeneric
    , TypeApplications
    , DataKinds
    , OverloadedLabels
    , BlockArguments
  ghc-options: -Wall
