cabal-version: 2.4
name: advent
version: 0

executable advent
  build-depends:
      base
    , text
    , lens
    , vector
    , primitive
    -- , sets
    , unordered-containers
    , hashable
    , containers
    , reducers
    , mtl
    , fused-effects
    , split
    , array
    , generic-lens
    , transformers
    , monadlist
    , parsec
  default-extensions:
      ScopedTypeVariables
    , OverloadedStrings
    , DerivingStrategies
    , DeriveGeneric
    , TypeApplications
    , DataKinds
    , OverloadedLabels
    , BlockArguments
    , LambdaCase
    , MultiWayIf
    , InstanceSigs
  ghc-options: -Wall -O
  main-is: Main.hs
  other-modules:
    Old
    Helpers
